--- a/src/example/index.html
+++ b/src/example/index.html
@@ -2,96 +2,60 @@
 <html>
     <head>
         <title>easyXDM</title>
-        <script type="text/javascript" src="../easyXDM.debug.js">
-        </script>
-        <script type="text/javascript">
-            /**
-             * Request the use of the JSON object
-             */
-            easyXDM.DomHelper.requiresJSON("../json2.js");
-        </script>
-        <script type="text/javascript">
-            /* Here we demo how to have two visible web applications communicate together.
-             * This is done by having the remote interface open a visible window and loading
-             * the application in this.
-             * Since the remote interface has access to the entire DOM (including javascript)
-             * of the opened window, the remote interface is able to interface freely with the
-             * remote web application and can serve as a bridge between the two applications.
-             */
-            var REMOTE = (function(){
-                var remote = location.href;
-                switch (location.host) {
-                    case "provider.easyxdm.net":
-                        location.href = remote.replace("provider", "consumer");
-                        break;
-                    case "easyxdm.net":
-                        remote = remote.replace("easyxdm.net", "consumer.easyxdm.net");
-                        break;
-                    case "consumer.easyxdm.net":
-                        remote = remote.replace("consumer", "provider");
-                        break;
-                    case "xdm1":
-                        remote = remote.replace("xdm1", "xdm2");
-                        break;
-                }
-                return remote.substring(0, remote.lastIndexOf("/"));
-            }());
-            var proxy, win;
-            function openPopup(){
-                if (win) {
-                    return;
-                }
-                win = window.open(REMOTE + '/remoteapp.html' + '#easyXDM_xyz_provider', 'mainapp', "width=400, height=400");
-                document.getElementById("btn").disabled = "";
-                proxy = new easyXDM.Socket(/** The configuration */{
-                    /**
-                     * Register the method that should handle incoming data
-                     * @param {Object} data
-                     * @param {String} origin
-                     */
-                    onMessage: function(data, origin){
-                        data = JSON.parse(data);
-                        var div = document.createElement("div");
-                        div.innerHTML = "data from '" + origin + "'";
-                        document.body.appendChild(div);
-                        for (var key in data) {
-                            div = document.createElement("div");
-                            div.innerHTML = key + "=" + data[key];
-                            document.body.appendChild(div);
-                        }
-                    },
-                    channel: "xyz",
-                    /**
-                     * Register the url to name.html, this must be an absolute path
-                     * or a path relative to the root.
-                     * @field
-                     */
-                    local: "../name.html",
-                    /**
-                     * Register the url to the remote interface
-                     * @field
-                     */
-                    remote: REMOTE + "/remote.html",
-                    remoteHelper: REMOTE + "/../name.html"
-                });
-            }
-        </script>
     </head>
     <body>
-        <div style="border:1px solid black;padding:3px">
-            <div style="float:right">
-                <a href="http://www.addthis.com/bookmark.php?v=250&amp;pub=xa-4a6cb9890fd71978" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]');" onmouseout="addthis_close();" onclick="return addthis_sendto();"><img src="http://s7.addthis.com/static/btn/lg-share-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"/></a>
-                <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js?pub=xa-4a6cb9890fd71978">
-                </script>
-            </div>
-            <a href="http://easyxdm.net/docs/">See easyxdm.net/docs for full documentation and more examples</a>
+        <div style="border:1px solid black;padding:3px;margin:10px;">
+            <a href="http://github.com/oyvindkinsey/easyXDM/#readme">Readme at github</a>
+            | 
+            | <a href="http://easyxmd.net/">easyXDM.net</a>
+            | <a href="http://groups.google.com/group/easyxdm">easyXDM at Google Groups</a>
             <br/>
             The examples are executing slower than the production build due to the extensive tracing.
+            <br/>
+            If you are alerted about a popup, then this is only the trace log feature. You can ignore this.
         </div>
-        <!-- easyXDM.Debug.trace(msg) will output its messages to any element with the id "log" -->
-        <div id="log" style="height:100px;border:1px dotted black;overflow:auto">
-        </div>
-        <input type="button" onclick="openPopup();" value="Open popup"/><!-- Send som data to the other side --><input id="btn" disabled="disabled" type="button" onclick="proxy.postMessage(JSON.stringify({a:'b',c:'d',e:'f'}));" value="send data to remote"/>
+        <ul>
+        	<li>
+                <a href="transport.html">Transport</a>
+                <br/>
+                Example of passing a string message from one domain to another using the Socket.
+            </li>
+            <li>
+                <a href="data.html">Data</a>
+                <br/>
+                Example of passing data using a Socket and a custom serializer/deserializer.
+            </li>
+            <li>
+                <a href="methods.html">Methods</a>
+                <br/>
+                Example of using the Rpc object for executing Remote Procedure Calls with arguments and having results returned.
+            </li>
+            <li>
+                <a href="resize_iframe.html">Resize iframe</a>
+                <br/>
+                Example on how to use easyXDM to automatically resize an iframe. This uses an intermediate frame to enable navigation of the contained document
+            </li>
+            <li>
+                <a href="upload.html">Upload</a>
+                <br/>
+                Example on how to facilitate 'cross domain AJAX upload'. 
+            </li>
+            <li>
+                <a href="widgets.html">Widgets</a>
+                <br/>
+                Example on how to use easyXDM to build a framework for widgets using a pub/sub schema.
+            </li>
+            <li>
+                <a href="xhr.html">XHR</a>
+                <br/>
+                Example of using the shipped /cors/ endpoint to retrieve resources across the domain boundary.
+            </li>
+            <li>
+                <a href="bridge.html">Bridge</a>
+                <br/>
+                Experimental example of how to 'bridge' two web apps together. 
+            </li>
+        </ul>
         <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
