--- a/src/tests/index.html
+++ b/src/tests/index.html
@@ -4,7 +4,16 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=100">
         <title>easyTest results</title>
-        <script type="text/javascript" src="../easyXDM.debug.js">
+        <script type="text/javascript" src="easyXDM.debug.js">
+        </script>
+        <script type="text/javascript">
+          easyXDM._test_global = true;
+        </script>
+        <script type="text/javascript" src="easyXDM.debug.js">
+        </script>
+        <script type="text/javascript">
+          // Used in the noConflict test
+          var modules = { easyXDM: easyXDM.noConflict("modules") };
         </script>
         <script type="text/javascript">
             if (location.href.indexOf("src") !== -1) {
