New feature release

--- a/src/changes.html
+++ b/src/changes.html
@@ -6,6 +6,19 @@
     <body>
         <ul>
             <li>
+                2.4.10 02.01.11
+                <br/>
+                easyXDM.noConflict added by Anton Kovalyov, this enables you to easily embed easyXDM in a distribution without risking version collisions.
+                <br/>
+                Fixed a bug in the DOM 
+                <code>
+                    whenReady
+                </code>
+                code where easyXDM wouldn't get initialized when loaded dynamically on WebKit.
+                <br/>
+                Improved the documentation and the shipped examples.
+            </li>
+            <li>
                 2.4.9 10.11.10
                 <br/>
                 Improved the 
