Updated the copyright notice

--- a/src/header.html
+++ b/src/header.html
@@ -1,7 +1,7 @@
 <!--
  easyXDM 
  http://easydm.net/
- Copyright(c) 2009, Øyvind Sean Kinsey, oyvind@kinsey.no.
+ Copyright(c) 2009-2011, Øyvind Sean Kinsey, oyvind@kinsey.no.
  
  MIT Licensed - http://easyxdm.net/license/mit.txt 
 -->
