Fixed some issues with the examples

--- a/src/example/transport.html
+++ b/src/example/transport.html
@@ -26,7 +26,7 @@
             }());
             var transport = new easyXDM.Socket(/** The configuration */{
                 /**
-                 * Register the url to hash.html, this must be an absolute path
+                 * Register the url to name.html, this must be an absolute path
                  * or a path relative to the root.
                  * @field
                  */
