Fixed the tests and examples to match the new security model used by the FlashTransport. The consumer now MUST reference the providers copy of easyxdm.swf.

--- a/src/example/resize_iframe.html
+++ b/src/example/resize_iframe.html
@@ -26,7 +26,7 @@
             
             var transport = new easyXDM.Socket(/** The configuration */{
                 remote: REMOTE + "/resize_intermediate.html?url=resized_iframe_1.html",
-                swf: "../easyxdm.swf",
+                swf: REMOTE + "/../easyxdm.swf",
                 container: "embedded",
                 onMessage: function(message, origin){
                     this.container.getElementsByTagName("iframe")[0].style.height = message + "px";
