--- a/src/example/data.html
+++ b/src/example/data.html
@@ -71,7 +71,7 @@
                      * @field
                      */
                     local: "../name.html",
-                    swf: "../easyxdm.swf",
+                    swf: REMOTE + "/../easyxdm.swf",
                     /**
                      * Register the url to the remote interface
                      * @field
