--- a/src/example/transport.html
+++ b/src/example/transport.html
@@ -31,7 +31,7 @@
                  * @field
                  */
                 local: "../name.html",
-                swf: "../easyxdm.swf",
+                swf: REMOTE + "/../easyxdm.swf",
                 /**
                  * Register the url to the remote interface
                  * @field
