New bug-fix release

--- a/src/changes.html
+++ b/src/changes.html
@@ -6,6 +6,15 @@
     <body>
         <ul>
             <li>
+                2.4.15 07.07.11
+                <br/>
+                Fixed an issue with the FlashTransport and domains containing hyphens.
+                <br/>
+                Fixed an issue with the FlashTransport and IE7 due to aggressive caching.
+                <br/>
+                The stack will now only fall back to the FlashTransport if the swf: property has explicitly been set.
+            </li>
+            <li>
                 2.4.14 07.06.11
                 <br/>
                 Fixed several issues with the FlashTransport. These includes proper support for valid domain names, non-standard ports, a race condition relating to
