--- a/src/tests/test_async.html
+++ b/src/tests/test_async.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>easyXDM</title>
-        <script type="text/javascript" src="../core.js">
+        <script type="text/javascript" src="../easyXDM.async.debug.js">
         </script>
         <script type="text/javascript">
             var transport;
