--- a/src/example/index.html
+++ b/src/example/index.html
@@ -7,7 +7,7 @@
         <div style="border:1px solid black;padding:3px;margin:10px;">
             <a href="http://github.com/oyvindkinsey/easyXDM/#readme">Readme at github</a>
             | 
-            | <a href="http://easyxmd.net/">easyXDM.net</a>
+            | <a href="http://easyxdm.net/">easyXDM.net</a>
             | <a href="http://groups.google.com/group/easyxdm">easyXDM at Google Groups</a>
             <br/>
             The examples are executing slower than the production build due to the extensive tracing.
