--- a/src/example/transport.html
+++ b/src/example/transport.html
@@ -53,7 +53,7 @@
             <a href="index.html">Index of examples</a>
             | <a href="http://github.com/oyvindkinsey/easyXDM/#readme">Readme at github</a>
             | 
-            | <a href="http://easyxmd.net/">easyXDM.net</a>
+            | <a href="http://easyxdm.net/">easyXDM.net</a>
             | <a href="http://groups.google.com/group/easyxdm">easyXDM at Google Groups</a>
             <br/>
             The examples are executing slower than the production build due to the extensive tracing.
