--- a/src/cors/index.html
+++ b/src/cors/index.html
@@ -108,6 +108,9 @@
                     var timeout;
                     timeout = setTimeout(function(){
                         req.abort();
+                        // reset the handler
+                        req.onreadystatechange = Function.prototype;
+                        req = null;
                         error({
                             message: "timeout after " + config.timeout + " second",
                             status: 0,
