window.XMLHttpRequest fix for IE6

--- a/src/cors/index.html
+++ b/src/cors/index.html
@@ -84,7 +84,7 @@
                     
                     // set the CORS request header
                     // only if there is no XHR2 features
-                    if (!XMLHttpRequest || !('withCredentials' in (new XMLHttpRequest))) {
+                    if (!window.XMLHttpRequest || !('withCredentials' in (new window.XMLHttpRequest))) {
                         config.headers.Origin = remote.origin;
                     }
                     
