--- a/src/changes.html
+++ b/src/changes.html
@@ -6,6 +6,15 @@
     <body>
         <ul>
             <li>
+                2.4.16 09.02.12
+                <br/>
+                Improved many of the samples</br>
+                Fixed issues with logging</br>
+                Added support for posting to the initial src</br>
+                Several minor bugfixes</br>
+                +++ See commit log
+            </li>
+            <li>
                 2.4.15 07.07.11
                 <br/>
                 Fixed an issue with the FlashTransport and domains containing hyphens.
