--- a/src/tests/test_namespace.html
+++ b/src/tests/test_namespace.html
@@ -9,9 +9,11 @@
                 easyXDM: easyXDM.noConflict("modules")
             };
             
-            var transport;
+            var transport,
+                prefix_match = location.search.match(/[?&]prefix=([^&]+)/);
             window.onload = function(){
                 transport = new modules.easyXDM.Socket({
+                    prefix: prefix_match ? prefix_match[1] : '',
                     local: "../name.html",
                     swf: "../easyxdm.swf",
                     onMessage: function(message, origin){
