more robust reading of prefix in test provider html files

--- a/src/tests/test_namespace.html
+++ b/src/tests/test_namespace.html
@@ -10,7 +10,7 @@
             };
             
             var transport,
-                prefix_match = location.search.match(/[?&]prefix=([^&]+)/);
+                prefix_match = location.search.match(/[?&]prefix=([^&#]+)/);
             window.onload = function(){
                 transport = new modules.easyXDM.Socket({
                     prefix: prefix_match ? prefix_match[1] : '',
