--- a/src/tests/test_transport.html
+++ b/src/tests/test_transport.html
@@ -6,7 +6,7 @@
         </script>
         <script type="text/javascript">
             var transport,
-                prefix_match = location.search.match(/[?&]prefix=([^&]+)/);
+                prefix_match = location.search.match(/[?&]prefix=([^&#]+)/);
             window.onload = function(){
                 transport = new easyXDM.Socket({
                     prefix: prefix_match ? prefix_match[1] : '',
