--- a/src/tests/test_namespace.html
+++ b/src/tests/test_namespace.html
@@ -9,11 +9,9 @@
                 easyXDM: easyXDM.noConflict("modules")
             };
             
-            var transport,
-                prefix_match = location.search.match(/[?&]prefix=([^&#]+)/);
+            var transport;
             window.onload = function(){
                 transport = new modules.easyXDM.Socket({
-                    prefix: prefix_match ? prefix_match[1] : '',
                     local: "../name.html",
                     swf: "../easyxdm.swf",
                     onMessage: function(message, origin){
