--- a/src/tests/test_transport.html
+++ b/src/tests/test_transport.html
@@ -5,11 +5,9 @@
         <script type="text/javascript" src="../easyXDM.debug.js">
         </script>
         <script type="text/javascript">
-            var transport,
-                prefix_match = location.search.match(/[?&]prefix=([^&#]+)/);
+            var transport;
             window.onload = function(){
                 transport = new easyXDM.Socket({
-                    prefix: prefix_match ? prefix_match[1] : '',
                     local: "../name.html",
                     swf: "../easyxdm.swf",
                     onMessage: function(message, origin){
