Updated the changelog

--- a/src/changes.html
+++ b/src/changes.html
@@ -6,6 +6,17 @@
     <body>
         <ul>
             <li>
+                2.4.18 21.09.13
+                <br/>
+                Removed two sets of XSS vulnerabilities:
+                <br/>
+                - XSS due to lack of validation in easyxdm.as - disclosed responsibly by Jakob Heuser (LinkedIn)
+                <br/>
+                - XSS due to lack of validation in easyxdm.as (CVE-2013-5212) - disclosed by Krzystof Kotowicz (Cure53)
+                <br/>				
+                +++ See commit log
+            </li>
+            <li>
                 2.4.16 09.02.12
                 <br/>
                 Improved many of the samples</br>
