--- a/src/changes.html
+++ b/src/changes.html
@@ -10,7 +10,7 @@
                 <br/>
                 Removed XSS vulnerability:
                 <br/>
-                - XSS due to lack of validation in name.html (CVE-2014-1403) - disclosed by Krzystof Kotowicz (Cure53)
+                - XSS due to lack of validation in name.html (CVE-2014-1403) - disclosed by <a href="http://blog.kotowicz.net">Krzystof Kotowicz</a>
             </li>
             <li>
                 2.4.18 21.09.13
