Add missing anchor to the regexp for validating the uri format in name.html.

--- a/src/name.html
+++ b/src/name.html
@@ -24,7 +24,7 @@
                 else {
                     channel = hash.substring(0, indexOf);
                     url = decodeURIComponent(hash.substring(indexOf + 1));
-                    if (url && !/https?:\/\//.test(url)) {
+                    if (url && !/^https?:\/\//.test(url)) {
                         throw new Error('Invalid url');
                     }
                 }
